Add content to tiramisu recipe page
Adds image, description and recipe content to the tiramisu page.

--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -6,6 +6,46 @@
     </head>
     <body>
         <h1>Tiramisu</h1>
+        <img src="../images/tiramisu.jpg" alt="image of tiramisu">
+        <!-- 
+        img source for reference
+        other img sizes available
+        Photo by <a href="https://unsplash.com/@vicaleksa?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Victoria Aleksandrova</a> on <a href="https://unsplash.com/photos/person-slicing-pasrty-XKzfIg-LVcU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+       -->
+        
+        <h2>Description</h2>
+        <p>Tiramisu is a delicious italian dessert consisting of layers of cream, marscarpone and ladyfingers soaked in coffee. The word <em>tiramisu</em> translates to "pick-me-up."</p>
+        <p>Traditionally, tiramisu contains alcohol, however, it is just as enjoyable without. If you would prefer not to use alcohol, just leave out the rum.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>6 egg yolks</li>
+            <li>3/4 cup white sugar</li>
+            <li>2/3 cup milk</li>
+            <li>1 1/4 cups heavy cream</li>
+            <li>1/2 teaspoon vanilla extract</li>
+            <li>1 pound mascarpone cheese at room temperature</li>
+            <li>1/4 cup coffee at room temperature</li>
+            <li>2 tablespoons rum (optional)</li>
+            <li>2 (3 ounce) packages ladyfinger cookies</li>
+            <li>1 tablespoon unsweetened cocoa powder</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>In a medium saucepan, whisk together egg yolks and sugar.</li>
+            <li>Whisk in milk and cook over medium heat. Stir constantly until it comes to a boil.</li>
+            <li>Boil for one minute, then allow to cool.</li>
+            <li>Cover the mixture and chill in the refrigerator for 1 hour.</li>
+            <li>Whisk the cream and vanilla with an electric mixer until stiff peaks form.</li>
+            <li>Whisk together the egg mixture from the refrigerator and the marscarpone cheese until smooth.</li>
+            <li>Combine coffee and rum in a small bowl. Briefly soak ladyfingers in the coffee and arrange them to cover the bottom of a baking dish.</li>
+            <li>Spread the half marscarope mixture evenly on top of the ladyfingers. Do the same with the whipped cream.</li>
+            <li>Repeat the last 2 steps. The tiramisu should have 2 layers of ladyfingers, cheese and cream.</li>
+            <li>Dust cocoa powder over the top.</li>
+            <li>Refrigerate for 4 to 6 hours and serve.</li>
+        </ol>
+        <!-- Recipe link (from allrecipes) https://www.allrecipes.com/recipe/21412/tiramisu-ii/ -->
         <a href="../index.html">Home</a>
     </body>
 </html>
